# Intel-II

./: README.md  pyproject.toml
.jairo/Unit-I/: Decision_Trees.ipynb  Muestreos.txt  Parte2Parcial1Inteligentes1.ipynb  RegLineal.ipynb  RegLinealMultivariable.ipynb  RegPolinomica.ipynb
.jairo/Unit-II/: Experimentacion_DBSCAN.ipynb  Experimentacion_HDBSCAN.ipynb  Experimentacion_KMeans.ipynb  NoteBook.ipynb  Particional_KMEANS.ipynb  Reduccion_TSNE_UMAP.ipynb  data_PCA.csv  data_reduccion_PCA.csv  data_reduccion_TSNE.csv  data_reduccion_UMAP.csv  data_transformada.csv
.jairo/Unit-III/: DQN_FrozenLake.ipynb  FFNN_Regresion.ipynb  Perceptron_multicapa.ipynb  Perceptron_multicapa_II.ipynb  Perceptron_simple.ipynb  Q_Learning_simple.ipynb  requirements.txt
.jairo/Unit-III/HWork-QLearning/: mountain_car.pkl  mountain_car.py
Code/: test-one.py
Partials/First/: exam-1.ipynb  exam-2.ipynb  exam-3.ipynb  exam.py
Project/: alter.py  main.py
partial/zero/: demo-exam.py
